--- a/goal.yaml
+++ b/goal.yaml
@@ -4,97 +4,98 @@ goal_type: natural_language
 prompt: |
    Go to https://gemini.google.com/u/2/app
    Use the `get_page_content` tool to find the main text input area.
-   Use the `paste` tool to Paste image from the clipboard into that text area
+   In the text box, enter the prompt: "Generate an image of a south Indian woman autmid 20s. Stunning beauty with traditional beauty wearing traditional kurta.Close up portrait waist level shot with subject smiling. A frontal view profile."
+   Wait for 60 seconds for the image to be generated.
 
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close-up shot.., sitting on the sand with a wide smile, wearing the beach wear. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close-up shot.., sitting with legs wide open in a yoga pose on a beach towel, wearing the same beach wear. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    
    Use the `get_page_content` tool to find the main text input area.
    Use the `paste` tool to Paste image from the clipboard into that text area
 
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close-up  shot.., in a lush green park. Change attire to casual jeans and a t-shirt. Change pose to sitting on a park bench. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera,  close-up shot.., in a park, doing a yoga tree pose, wearing athletic wear. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
 
    Use the `get_page_content` tool to find the main text input area.
    Use the `paste` tool to Paste image from the clipboard into that text area
 
    In the text box, enter the prompt: Change to a headshot showing a full laugh with a head tilted slightly. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a waist-level shot, wearing a stylish evening gown, standing on a balcony at night with city lights in the background. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
 
    Use the `get_page_content` tool to find the main text input area.
    Use the `paste` tool to Paste image from the clipboard into that text area
 
    In the text box, enter the prompt: Change to a close-up side profile, wearing traditional jewelry, in a temple with ornate carvings. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
 
    Use the `get_page_content` tool to find the main text input area.
    Use the `paste` tool to Paste image from the clipboard into that text area
 
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, full-length back profile, walking away on a cobblestone street in a winter coat. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
 
    Use the `get_page_content` tool to find the main text input area.
    Use the `paste` tool to Paste image from the clipboard into that text area
 
    In the text box, enter the prompt: Change to a waist-level shot, in a coffee house. Change attire to a modern business suit. Change pose to sitting at a table with a laptop. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a knee-level shot, in an office, wearing professional business attire. Change pose to standing confidently. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
 
    Use the `get_page_content` tool to find the main text input area.
    Use the `paste` tool to Paste image from the clipboard into that text area
 
    In the text box, enter the prompt: "Change to a close up shot, full length shot. Keep everything else the same. "
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a headshot, with a wide smile and sparkling eyes. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a headshot with a sad and thoughtful look. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
 
    Use the `get_page_content` tool to find the main text input area.
    Use the `paste` tool to Paste image from the clipboard into that text area
 
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., in a park, running with a joyful expression, wearing athletic wear. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., in a professional setting, wearing an elegant dress. Change pose to standing near a window. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a portrait shot, in a dim-lit home. Change attire to loungewear. Change expression to a thoughtful look. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a waist-level shot, in a living room, wearing comfortable clothes. Change pose to sitting on a sofa. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
 
    Use the `get_page_content` tool to find the main text input area.
    Use the `paste` tool to Paste image from the clipboard into that text area
 
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., in a home setting, with an annoyed expression. Change pose to standing by the kitchen counter. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., at a party, wearing a stylish evening gown. Change pose to dancing with a joyful expression. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
    In the text box, enter the prompt: Change to a frontal view, looking at the viewer, facing the camera, close up shot, close up shot, full length shot.., smiling brightly while holding a bouquet of flowers in a sun-drenched garden. 
    Click on the submit button at the bottom right.
-   Wait for 100 seconds for the image to be generated.
+   Wait for 60 seconds for the image to be generated.
