--- a/goal.yaml
+++ b/goal.yaml
@@ -1,25 +1,15 @@
-run_id: "linkedin-feed-search-aakash-05"
-description: "Find recent posts from Aakash Gupta using a highly explicit, sequential search."
+run_id: "linkedin-feed-search-aakash-final"
+description: "Find recent posts from Aakash Gupta using a two-phase collect-then-analyze strategy."
 goal_type: natural_language
 prompt: |
+  # PHASE 1: DATA COLLECTION
   1. Navigate to www.linkedin.com.
-  2. Scroll down the main feed 5 times to load the initial content.
+  2. Scroll down 5 times to load initial content.
+  3. Find the "show more feed updates" button and click it 5 times, scrolling 3 times after each click.
+  4. Use the `find_elements` tool to get a list of unique selectors for up to 50 post containers (selector: 'div.feed-shared-update-v2').
 
-  3. **First Iteration:**
-     a. Find the button with the text "show more feed updates".
-     b. If the button is found, click it.
-     c. Immediately after attempting the click, scroll down 2 times.
-
-  4. **Second Iteration:**
-     a. Find the button with the text "show more feed updates" again.
-     b. If the button is found, click it.
-     c. Immediately after attempting the click, scroll down 2 times.
-
-  5. **Third Iteration:**
-     a. Find the button with the text "show more feed updates" one last time.
-     b. If the button is found, click it.
-     c. Immediately after attempting the click, scroll down 5 final times to ensure all content is loaded.
-  
-  6. Extract the data for up to 30 posts, getting the author's name and the post text for each one.
-  7. Review the extracted data. If any posts are by "Philipp SchmidPhilipp Schmid", collect them.
-  8. Call `finish_task` with a JSON summary of the posts you found. If no posts by "Aakash Gupta" were found after this extensive search, state that in the summary.
+  # PHASE 2: ITERATION & FINAL ANALYSIS
+  5. **CRITICAL**: Now, for each of the 50 post selectors you found in the previous step, execute the `get_post_details` tool one time.
+  6. After you have called `get_post_details` for all 50 posts, you MUST stop calling tools.
+  7. Your final step is to review the entire history of extracted details from all the posts. Analyze this complete dataset to find any posts where the author is "Aakash Gupta".
+  8. Call `finish_task` with a JSON summary of the posts you found. If none were found, state that in the final summary.
