--- a/goal.yaml
+++ b/goal.yaml
@@ -1,13 +1,9 @@
-run_id: "linkedin-feed-search-aakash-final"
-description: "Find recent posts from Aakash Gupta using a two-phase collect-then-analyze strategy."
+run_id: "linkedin-activity-debug-capture-first-post"
+description: "Capture the HTML of the first visible post on the activity page immediately after it loads."
 goal_type: natural_language
 prompt: |
-  # PHASE 1: DATA COLLECTION
   1. Navigate to https://www.linkedin.com/in/aagupta/recent-activity/all/
-  2. Scroll down 2 times to load initial content.
-
-  # PHASE 2: ITERATION & FINAL ANALYSIS
-  5. **CRITICAL**: Now, for each of the post selectors you found in the previous step, execute the `get_post_details` tool one time.
-  6. After you have called `get_post_details` for all posts, you MUST stop calling tools.
-  7. Your final step is to review the entire history of extracted details from all the posts.
-  8. Call `finish_task` with a JSON summary of the posts you found. If none were found, state that in the final summary.
+  2. **Wait for the first post container to become visible.** The selector for the post container is 'div.occludable-update'.
+  2b. ** wait for 20 seconds **
+  3. **Immediately after the first post is visible, and without scrolling**, use the `get_page_html` tool to get the full HTML of that first post container. The selector is 'div.occludable-update >> nth=0'.
+  4. Call `finish_task` and provide the raw HTML you extracted as the summary.
